--- a/Progetto/index.html
+++ b/Progetto/index.html
@@ -4,8 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Progetto</title>
+    <style>
+        table,th,td{
+            border: 2px solid black;
+            border-collapse: collapse;
+        }
+    </style>
 </head>
 <body>
-    buso del cueo
+    <table id="gliglia">
+        <tr>
+            <th>Alunno</th>
+            <th>giro</th>
+            <td style="height: 100%;" rowspan="2"><button id="add">+</button></td>
+        </tr>
+        <tr>
+            <td>luca</td>
+            
+        </tr>
+    </table>
 </body>
 </html>
