--- a/Progetto/index.html
+++ b/Progetto/index.html
@@ -13,16 +13,25 @@
     </style>
 </head>
 <body>
+    <h1>TURBO INTERROGAZIONI WEBAPP</h1>
+    <button>Cambia classe</button>
+    <div id="random">
+        <p id="numero"></p>
+
+    </div>
     <table id="gliglia">
         <tr>
             <th>Alunno</th>
-            <th>giro</th>
-            <td style="height: 100%;" rowspan="2"><button id="add">+</button></td>
+            <th >giro 1</th>
+            <td style="height: 100%;" rowspan="2" id="bottone"><button id="add">+</button></td>
         </tr>
         <tr>
             <td>luca</td>
             
         </tr>
     </table>
+    <script>
+        
+    </script>
 </body>
 </html>
