--- a/Progetto/index.html
+++ b/Progetto/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Progetto</title>
     <script src="script.js"></script>
+    <link rel="stylesheet" href="style.css">
     <style>
         table,th,td{
             border: 2px solid black;
@@ -17,7 +18,7 @@
         <tr>
             <th>Alunno</th>
             <th>giro</th>
-            <td style="height: 100%;" rowspan="2"><button id="add">+</button></td>
+            <td  rowspan="2"><button id="add">+</button></td>
         </tr>
         <tr>
             <td>luca</td>
