commit per cambio json e avanzamento style css

--- a/Progetto/index.html
+++ b/Progetto/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <h1>TURBO INTERROGAZIONI WEBAPP</h1>
-    <button>Cambia classe</button>
+    <button id="cambiaclasse">Cambia classe</button>
     <div id="random">
         <p id="numero"></p>
 
