maitake maitake guru guru

--- a/Progetto/index.html
+++ b/Progetto/index.html
@@ -13,11 +13,12 @@
     </style>
 </head>
 <body>
-    <table id="gliglia">
-        <tr>
+    <button id="add" onclick="ColonnaPiu()">+</button>
+    <table id="griglia">
+        <tr id="riga0">
             <th>Alunno</th>
-            <th>giro</th>
-            <td style="height: 100%;" rowspan="2"><button id="add">+</button></td>
+            <th>giro 1</th>
+            
         </tr>
         <tr>
             <td>luca</td>
