sistemato: bottone annulla

--- a/Progetto/index.html
+++ b/Progetto/index.html
@@ -55,6 +55,7 @@
         <button onclick="setColor('red')">r</button>
         <button onclick="setColor('yellow')">y</button>
         <button onclick="setColor('green')">g</button>
+        <button id="annullaBtn" onclick="cancel()" style="display: none;">Annulla</button>
         <button onclick="closeModal()" id="close">&times</button>
       </div>
     </div>
