leggi il commit precedente

--- a/Progetto/index.html
+++ b/Progetto/index.html
@@ -23,8 +23,9 @@
       border: 2px solid black;
       border-collapse: collapse;
     }
-    tr{height: 25px;}
-    tr:hover{background-color: #ddd;}
+    tr{height: 30px;}
+    td{width: 50px;}
+    tr:hover,td:hover{background-color: #ddd;}
     #modal {
       display: none;
       position: fixed;
