--- a/Progetto/index.html
+++ b/Progetto/index.html
@@ -72,9 +72,9 @@
 <body>
   <div id="modal">
     <div id="modalContent">
-      <button onclick="setColor('red')">r</button>
-      <button onclick="setColor('yellow')">y</button>
-      <button onclick="setColor('green')">g</button>
+      <button onclick="setColor('red');closeModal();">r</button>
+      <button onclick="setColor('yellow');closeModal();">y</button>
+      <button onclick="setColor('green');closeModal();">g</button>
       <button id="annullaBtn" onclick="cancel()" >Annulla</button>
       <button onclick="closeModal()" id="close">&times</button>
     </div>
