--- a/Progetto/index.html
+++ b/Progetto/index.html
@@ -13,7 +13,7 @@
       padding: 0;
       font-family: sans-serif;
     }
-
+    
     table,
     th,
     td,
@@ -24,7 +24,7 @@
     
     tr{height: 30px;}
     td{width: 50px;}
-    tr:hover,td:hover{background-color: #ddd;}
+    tr:hover{background-color: #ddd;}
     #modal {
       display: none;
       position: fixed;
