--- a/Progetto/index.html
+++ b/Progetto/index.html
@@ -70,13 +70,13 @@
 </head>
 
 <body>
-  <div id="modal">
-    <div id="modalContent">
-      <button onclick="setColor('red')">r</button>
-      <button onclick="setColor('yellow')">y</button>
-      <button onclick="setColor('green')">g</button>
-      <button id="annullaBtn" onclick="cancel()" >Annulla</button>
-      <button onclick="closeModal()" id="close">&times</button>
+  <div id="modal" >
+    <div id="modalContent" class="modal">
+      <button onclick="setColor('red')" class="modalbtn">r</button>
+      <button onclick="setColor('yellow')" class="modalbtn">y</button>
+      <button onclick="setColor('green')" class="modalbtn">g</button>
+      <button id="annullaBtn" onclick="cancel()" class="modalbtn">Annulla</button>
+      <button onclick="closeModal()" id="close"class="modalbtn">&times</button>
     </div>
   </div>
   <h1>TURBO INTERROGAZIONI WEBAPP</h1>
